//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.users.c.orgunit;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.c.orgunit";
option java_outer_classname = "OrganizationalUnitProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/net/internet_domain.proto";
import "spine/users/identifiers.proto";
import "spine/users/values.proto";

// An organizational unit (aka orgunit).
//
// An orgunit is the part of the `Organization` or a larger `OrgUnit` that aggregates users
// and groups.
//
// It is forbidden to include an organizational unit into itself directly or indirectly. In other
// words, the organizational structure must always be an acyclic graph.
//
message OrgUnit {
    option (entity).kind = AGGREGATE;

    OrgUnitId id = 1;

    // A name of an orgunit to be displayed on UI.
    string display_name = 2 [(required) = true];

    // A parent entity in the organizational structure.
    OrganizationOrUnit parent_entity = 3 [(required) = true];

    // An internet domain of the orgunit.
    net.InternetDomain domain = 4;
}
